fixed minimal width on small screens(<320px>

--- a/public/scss/_components.scss
+++ b/public/scss/_components.scss
@@ -479,3 +479,17 @@ form{
         }
     }
 }
+
+
+@media screen and (max-width: 320px){
+    .table-container{
+        table{
+            tr{
+                th,
+                td{
+                    min-width: 0;
+                }
+            }
+        }
+    }
+}
